# Soar

./: SConstruct  pyproject.toml
.github/workflows/: build.yml
Core/ClientSMLSWIG/Python/: SConscript  pyproject.toml
